test/sema/variadic-function-too-few-args.delta
// RUN: %check_errors %not %delta -typecheck %s

extern void f(char* p, ...);

void main() {
    // CHECK: [[@LINE+1]]:5: error: too few arguments to 'f', expected at least 1
    f();
}
